add login registration and home page design and logic to post and like post

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,4 +1,4 @@
-main {
+/* main {
   min-height: 80vh;
 }
 h1 {
@@ -16,7 +16,6 @@ h3 {
   margin: 0.1rem;
 }
 
-/* Carousel */
 
 .carousel-item-next,
 .carousel-item-prev,
@@ -39,4 +38,4 @@ h3 {
 }
 .carousel a {
   margin: 0 auto;
-}
+} */
