--- a/frontend/src/login.css
+++ b/frontend/src/login.css
@@ -12,7 +12,7 @@
 }
 .myWrapper .loginContainer {
   padding: 20px;
-  width: 40vh;
+  width: 40vw;
   max-width: 500px;
   border: 1px solid #dedede;
   background-color: #fff;
