--- a/frontend/src/main.css
+++ b/frontend/src/main.css
@@ -202,3 +202,7 @@ button span {
 .replyFlag a {
   color: var(--blue);
 }
+.post.largeFont .postBody,
+.post.largeFont .postFooter {
+  font-size: 23px;
+}
