compled feature: add profile screen

--- a/frontend/src/main.css
+++ b/frontend/src/main.css
@@ -1,6 +1,7 @@
 :root {
   --blue: #1fa2f1;
   --blueLight: #9bd1f9;
+  --blueBackground: rgba(212, 237, 255, 0.6);
   --buttonHoverBg: #d4edff;
   --lightGrey: rgb(230, 236, 240);
   --spacing: 15px;
@@ -11,9 +12,18 @@
   --green: rgba(23, 191, 99);
   --greenBackground: rgba(23, 191, 99, 0.1);
 }
+body {
+  background-color: gray;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
+    'Helvetica Neue', Arial, 'Noto Sans', sans-serif, 'Apple Color Emoji',
+    'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji' !important;
+}
 
 .row-full {
   min-height: 100vh;
+}
+.wrapper > .row {
+  margin: 0;
 }
 a {
   color: inherit;
@@ -27,14 +37,14 @@ h1 {
   font-weight: 800;
   margin: 0;
 }
-nav {
+.myNav {
   display: flex;
   flex-direction: column;
   align-items: flex-end;
   height: 100%;
 }
 
-nav a {
+.myNav a {
   display: flex;
   padding: 10px;
   font-size: 30px;
@@ -45,10 +55,10 @@ nav a {
   color: #212529;
 }
 
-nav a.blue {
+.myNav a.blue {
   color: var(--blue);
 }
-nav a:hover {
+.myNav a:hover {
   background-color: var(--buttonHoverBg);
   color: var(--blue);
   border-radius: 50%;
@@ -216,3 +226,124 @@ button span {
 .deletePostMessage {
   font-size: 18px;
 }
+/* PROFILE CSS */
+.profileHeaderContainer .coverPhotoContainer {
+  height: 180px;
+  position: relative;
+  background-color: var(--blue);
+}
+.profileHeaderContainer .myUserImageContainer {
+  height: 132px;
+  width: 132px;
+  margin-left: var(--spacing);
+  position: absolute;
+  bottom: -66px;
+}
+.profileHeaderContainer .myUserImageContainer img {
+  width: 100%;
+  border-radius: 50%;
+  border: 4px solid #fff;
+}
+.profileHeaderContainer .profileButtonsContainer {
+  text-align: right;
+  padding: var(--spacing);
+  min-height: 66px;
+}
+.profuleButton,
+.followButton {
+  border: 1px solid var(--blue);
+  color: var(--blue);
+  font-weight: bold;
+  padding: 5px 15px;
+  border-radius: 60px;
+  display: inline-block;
+  margin-left: var(--spacing);
+}
+.followButton.following {
+  background-color: var(--blue);
+  color: #fff;
+  font-weight: bold;
+}
+
+.profuleButton:hover,
+.followButton:hover {
+  background-color: var(--blueBackground);
+  color: var(--blue) !important;
+}
+.profileHeaderContainer .userDetailsContainer {
+  display: flex;
+  flex-direction: column;
+  padding: 0 var(--spacing);
+}
+.followersContainer .value {
+  font-weight: bold;
+  margin-right: 5px;
+}
+.followersContainer span:not(.value) {
+  color: var(--greyText);
+}
+.followersContainer a {
+  margin-right: 15px;
+}
+.followersContainer a:hover {
+  border-bottom: 1px solid #000;
+}
+.myEnvelope {
+  fill: none;
+  stroke: currentColor;
+  --darkreader-inline-fill: none;
+  --darkreader-inline-stroke: currentColor;
+}
+.w-6 {
+  width: 24px;
+}
+.h-6 {
+  width: 24px;
+}
+.myEnvelopeSize {
+  width: 23px;
+  height: 23px;
+}
+.myTabsContainer .nav-tabs {
+  border-bottom: 1px solid var(--lightGrey);
+  flex-shrink: 0;
+  margin-bottom: 10px;
+}
+.myTabsContainer .nav-tabs .nav-item {
+  flex: 1;
+  height: 52px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: var(--greyText);
+  font-weight: bold;
+  margin: 0;
+  border: none;
+}
+.myTabsContainer .nav-tabs .active {
+  color: var(--blue);
+  border-bottom: 2px solid var(--blue);
+}
+
+/* .tabsContainer {
+  display: flex;
+  border-bottom: 1px solid var(--lightGrey);
+  flex-shrink: 0;
+}
+.tab {
+  flex: 1;
+  height: 52px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: var(--greyText);
+  font-weight: bold;
+}
+.tab.active {
+  color: var(--blue);
+  border-bottom: 2px solid var(--blue);
+}
+.tab:hover {
+  color: var(--blue);
+  background-color: var(--blueBackground);
+} */
